4.5 -> 5.0:
    - mgh: allow rpm to be built w/o neon
    - rse: remove unused rpmio/sexp/ sub-library
    - rse: add "errno" information to be more informative in error message when lstat(2) on verification fails.
    - rse: correctly restore SIGILL signal handler in machine detection code. 
    - pmatilaj: nuke antique Red Hat Linux "reference" "baddeps" list (in lib/depends.c)
    - rse: allow one to explicitly select the RPM DB API with --with-dbapi={db,sqlite}
    - rse: provide automatically Autoconf chosen RPM DB API selection and configuration
    - rse: allow one to build an SQLite-only RPM with "--without-db --with-sqlite=external"
    - rse: allow Berkeley-DB/SQLite-specific RPM DB per-tag parameters according to dynamically selected DB API
    - rse: introduce --with-bugreport=<email-address> and require this before unsupported Autoconf operations
    - rse: simplify internal Berkeley-DB handling in rpmdb/ and allow (unsupported) --with-db=external
    - pmatilaj: remove hardcoded "libtermcap" vs. Bash kludge in lib/psm.c
    - rse: implement --without-file, i.e., building RPM without File/magic support
    - rse: use regular LIBS for linking against SELinux library
    - rse: no longer re-build db_xxx utilities in rpmdb/ -- use already built db3/ versions instead
    - rse: no longer any librpm* libraries against external third-party libraries (rely on pkg-config)
    - rse: link all internal third-party libraries into librpmmisc exclusively
    - rse: install a pkg-config(1) specification "rpm.pc" for correctly linking against the RPM C API
    - rse: consistently move libraries from Automake _LDFLAGS to _LIBADD variables
    - rse: move misc/*.c from rpmio/stubs.c into misc/librpmmisc.c and build regular librpmmisc.la
    - rse: support building without ZLib via --without-zlib
    - rse: in rpmio for LZMA use %{__lzma} macro instead of hard-coded /usr/bin/lzma when possible
    - rse: use explicit enable/disable of Perl and Python APIs