@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - rse: add SQLite RPM DB support for "tmpdir=<path> excl cachesize=<bytes> pagesize=<bytes> temporary private perms=<bitmask>"
     - mgh: allow rpm to be built w/o neon
     - rse: remove unused rpmio/sexp/ sub-library
     - rse: add "errno" information to be more informative in error message when lstat(2) on verification fails.
